--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
     </parent>
 
     <properties>
-        <amazonaws.version>1.10.12</amazonaws.version>
+        <amazonaws.version>1.11.108</amazonaws.version>
     </properties>
 
     <dependencies>
@@ -78,6 +78,14 @@
             <artifactId>aws-java-sdk-s3</artifactId>
             <version>${amazonaws.version}</version>
         </dependency>
+
+        <!-- Jackson -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.6.2</version>
+        </dependency>
+
 
         <!-- JODA Version available in elasticsearch 1.7 is buggy (2.7)-->
         <!-- we need to pull 2.8.2 -->
