--- a/src/main/assemblies/plugin.xml
+++ b/src/main/assemblies/plugin.xml
@@ -22,6 +22,8 @@
                 <include>com.amazonaws:aws-java-sdk</include>
                 <include>joda-time:joda-time</include>
                 <include>commons-codec:commons-codec</include>
+                <include>org.apache.httpcomponents:httpclient</include>
+                <include>org.apache.httpcomponents:httpcore</include>
             </includes>
         </dependencySet>
     </dependencySets>
